WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286475
Instagram video doesn't replay
https://bugs.webkit.org/show_bug.cgi?id=286475
Summary
Instagram video doesn't replay
Jean-Yves Avenard [:jya]
Reported
2025-01-24 07:47:22 PST
https://www.instagram.com/reel/C98SScnvTas/?utm_source=ig_embed&ig_rid=4c6ad8e0-3c8b-4a4c-8cef-e6a74056f686
^^ I can watch this video once, but on reply the audio plays and the video does not. Reloading the page fixes it until the next video ends.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-01-24 07:47:34 PST
rdar://141590278
Jean-Yves Avenard [:jya]
Comment 2
2025-01-24 16:42:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39528
EWS
Comment 3
2025-01-25 20:05:27 PST
Committed
289401@main
(f1c1197adbc4): <
https://commits.webkit.org/289401@main
> Reviewed commits have been landed. Closing PR #39528 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug